fixing overflow on mobile

--- a/body.css
+++ b/body.css
@@ -15,6 +15,7 @@ html { font-family: 'Inter', sans-serif; }
 
 html, body{
     background-color: #0E1212;
+    position:relative;
     font-family: "Inter";
     color: #fff;
     height: 100%;
